# stevia

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  meson.options  phosh-osk-stevia.doap  run.in
.gitlab-ci/: debian.Dockerfile  run-docker.sh
data/: leak-suppress.txt  meson.build  mobi.phosh.Stevia.metainfo.xml.in  mobi.phosh.Stevia.service.in  mobi.phosh.osk.gschema.xml  sm.puri.OSK0.desktop.in.in
debian/: changelog  control  copyright  phosh-osk-stevia.alternatives  phosh-osk-stevia.install  rules
debian/tests/: control
doc/: phosh-osk-stevia.rst  phosh-osk-stevia.toml.in
examples/: pipe-completer-demo.sh
po/: LINGUAS  ja.po  ka.po  pl.po
src/: dh-dconf-migration.c  dh-dconf-migration.h  meson.build  phosh-osk-enums.h  phosh-osk-stevia.c  phosh-osk-stevia.gresources.xml  pos-activation-filter.c  pos-app.h  pos-clipboard-manager.c  pos-completer-base.c  pos-completer-base.h  pos-completer-manager.c  pos-completer.c  pos-completer.h  pos-completion-bar.c  pos-completions-box.c  pos-completions-box.h  pos-emoji-db.c  pos-emoji-db.h  pos-emoji-picker.c  pos-enums.h  pos-hw-tracker.c  pos-indicator-popup.c  pos-indicator-popup.h  pos-input-surface.c  pos-osk-dbus.c  pos-osk-key.c  pos-osk-widget.c  pos-output-priv.h  pos-output.c  pos-shortcuts-bar.c  pos-size-manager.c  pos-vk-driver.c  pos-vk-driver.h  pos-wayland.c  pos.h
src/completers/: meson.build  pos-completer-fzf.c  pos-completer-hunspell.c  pos-completer-pipe.c  pos-completer-presage.c  pos-completer-uim.c  pos-completer-uim.h  pos-completer-varnam.c
src/contrib/: util.c  util.h
src/layouts/: ch+fr.json  meson.build  rs.json  us+colemak.json  us+workman.json
src/stylesheet/: common.css
src/ui/: char-popup.ui  completion-bar.ui  input-surface.ui  shortcuts-bar.ui
tests/: meson.build  pos-test-completer.h  test-completer-base.c  test-completer-hunspell.c  test-completer-presage.c  test-completer-uim.c  test-completer.c  test-completers.c  test-emoji-db.c  test-osk-widget.c  test-size-manager.c
tools/: screenshot-all-layouts.py  write-layout-info.py
